--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="./assets/jquery-1.10.2.js"></script>
     <script src="./assets/jquery.zclip.js"></script>
     <script src="./assets/bootstrap/js/bootstrap.js"></script>
     <script src="./assets/main.js"></script>
